<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackgroundFloating"
    android:padding="@dimen/half">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:padding="@dimen/half"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/icon">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="@dimen/maxwidth">

                <ImageView
                    android:layout_width="@dimen/icon_humonguous"
                    android:layout_height="@dimen/icon_humonguous"
                    android:src="@drawable/ic_logo" />

                <TextView
                    style="@style/Text.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/doubled"
                    android:text="@string/intro_header" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_max="@dimen/sheet_maxwidth">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/intro_text_not_libre" />

                        <Button
                            android:id="@+id/firsttime_continue"
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14ssp"
                            android:textColor="@color/green"
                            android:text="@string/universal_action_continue" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>